remove depedency on external server from test